Changelog for Bake

    Change to a separate --host and --port flag
0.1
    Works to some level
0.0
    Initial version, not ready for public use