@@ -1,5 +1,6 @@
 Changelog for Bake
 
+    Sort out which directory things are run from
     Change to a separate --host and --port flag
 0.1
     Works to some level
